syntax = "proto3";

import "scalapb/scalapb.proto";
import "Common.proto";
import "Vehicle.proto";
import "Road.proto";
import "Intersection.proto";

option (scalapb.options) = {
  scope: FILE
  package_name: "protobuf.pl.agh.edu.agh.wmazur.avs.model"
  flat_package: true
};


message StateUpdate{
    UpdateType updateType = 1;
    uint64 timestamp = 2;
    repeated Vehicle vehicles = 3;
    repeated Road roads = 4;
    repeated Intersection intersections = 5;


    UpdateMeta meta = 15;
    enum UpdateType{
        Delta = 0;
        Full = 1;
    }
    message UpdateMeta{
        uint32 updatesPerSecond = 1;

    }
}

